package practice.commandpatternlamponoff;

// 램프 클래스
public class Lamp {

    // 램프 켜기 메서드
    public void turnOn() {
        System.out.println("Lamp On.");
    }

    // 램프 끄기 메서드
    public void turnOff() {
        System.out.println("Lamp Off.");
    }

}
