@startuml

title : 램프 On/Off 기능을 가진 Button 클래스다이어그램

class Button {
    + Button(theCommand : Command)
    + pressed() : void
    + setCommand(newCommand : Command) : void
}

interface Command {
    + execute() : void
}

class LampOnCommand {
    + execute() : void
}

class LampOffCommand {
    + execute() : void
}

class Lamp {
    + turnOn()  : void
    + turnOff()  : void
}

Button -> Command : -theCommand
Command <|.. LampOnCommand
Command <|.. LampOffCommand
LampOnCommand --> Lamp : -theLamp
LampOffCommand --> Lamp : -theLamp


@enduml